refactor java command